--- a/web/2022/flexbox/flexbox/#source/scss/style.scss
+++ b/web/2022/flexbox/flexbox/#source/scss/style.scss
@@ -15,13 +15,25 @@ body {
 }
 .block__row {
 	display: flex;
-	flex-wrap: nowrap;
-
 	border: 20px solid #ece89d;
 	margin: 0 0 20px 0;
+
+	flex-direction: column;
+	//align-items: flex-end;
+
+	height: 700px;
 }
 .block__column {
 	border: 20px solid #5e5373;
+}
+.block__column_1 {
+	
+}
+.block__column_2 {
+	
+}
+.block__column_3 {
+	flex: 1 1 auto;
 }
 .block__item {
 	background-color: #18b5a4;
